Add links to external tools

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
           </p>
           <p>
             You can download your creation as a vector (SVG) file and further
-            edit it using <a href="#">Figma</a> or
-            <a href="#">Adobe Illustrator</a>. If you prefer, you can also
-            download it as raster (PNG) file.
+            edit it using
+            <a href="https://www.figma.com/" target="_blank">Figma</a> or
+            <a href="https://www.adobe.com/products/illustrator" target="_blank"
+              >Adobe Illustrator</a
+            >. If you prefer, you can also download it as raster (PNG) file.
           </p>
           <p>
             I created this tool as a basis for my data visualization work, but
@@ -416,6 +418,8 @@
         <p>
           The Random Dots Generator is an open-source tool created by
           <a href="https://vsueiro.com">Vinicius Sueiro</a> as a side project.
+          Icons by
+          <a href="https://feathericons.com/" target="_blank">Feather</a>.
         </p>
         <a
           href="https://github.com/vsueiro/random-dots-generator"
