--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 
         <div class="contain">
           <p>
-            Sometimes, we just want to represent a big number as dots on the
-            screen. In that case, it’s important that all dots are visible.
-            That’s is why this tool prevents circles from overlapping by
-            default.
+            Sometimes we want to represent big numbers as dots on the screen. In
+            that case, it’s important all dots are visible. That’s is why this
+            tool prevents circles from overlapping by default.
           </p>
           <p>
             But what if we want to highlight some of those dots? Well… you can
