Reduces repaints on page load

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <div
             class="Sample"
             title="Animated and colorful graphic displays 100 circles, 10 of which are highlighted"
+            style="width: 120px; height: 120px"
           ></div>
 
           <h1>Random Dots <span>Generator</span></h1>
