--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
         <div class="contain">
           <p>
-            In data visualiation, sometimes we want to represent big numbers as
+            In data visualization, sometimes we want to represent big numbers as
             dots on the screen.
           </p>
           <p>
-            In that case, it’s important that all dots are visible. That’s is
-            why this tool prevents circles from overlapping by default.
+            In that case, it’s important that all dots are visible. That’s why
+            this tool prevents circles from overlapping by default.
           </p>
           <p>
             But what if we want to highlight some of those dots? Well… you can
@@ -48,7 +48,7 @@
             sizes.
           </p>
           <p>
-            For instance, if you want to represent that 10% of something. Simply
+            For instance, if you want to represent that 10% of something, simply
             set the amount of dots as 100 and the amount of highlights as 10.
             <span aria-hidden="true">
               You should get results like that image above.
