Fix another typo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div id="mobile-warning">
               <p><i data-feather="alert-triangle"></i></p>
               <p>
-                Sorry! This tool ony works on bigger screens, like laptops or
+                Sorry! This tool only works on bigger screens, like laptops or
                 tablets
               </p>
             </div>
