Update samples with newly published article

--- a/index.html
+++ b/index.html
@@ -349,8 +349,9 @@
                 </a>
                 <figcaption>
                   <p>
-                    Slides from my talk about data visualization at Festival
-                    Comunicação Científica, organized by Meio de Cultura UFSCar.
+                    Slides from my talk about data visualization at
+                    <i lang="pt-br">Festival Comunicação Científica</i>,
+                    organized by <i lang="pt-br">Meio de Cultura UFSCar</i>.
                     <span class="author"
                       >By
                       <a href="https://vsueiro.com/">Vinicius Sueiro</a></span
@@ -369,8 +370,9 @@
                 </a>
                 <figcaption>
                   <p>
-                    Artwork for Visual Data, the column on La Lettura, the
-                    cultural supplement of Corriere Della Sera.
+                    Artwork for Visual Data, the column on
+                    <i lang="it">La Lettura</i>, the cultural supplement of
+                    <i lang="it">Corriere Della Sera</i>.
                     <span class="author">
                       By
                       <a
@@ -378,7 +380,7 @@
                         target="_blank"
                         >Federica Fragapane</a
                       >
-                      and
+                      &
                       <a href="https://twitter.com/paolocorti_" target="_blank"
                         >Paolo Corti</a
                       >
@@ -393,12 +395,36 @@
             </li>
             <li>
               <figure>
-                <img src="samples/underground.png" />
+                <a
+                  href="https://www.otempo.com.br/cidades/tragedia-de-brumadinho-oito-estrategias-de-busca-nortearam-os-bombeiros-1.2801259"
+                  target="_blank"
+                >
+                  <img src="samples/underground.png" />
+                </a>
                 <figcaption>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit,
-                    reiciendis unde eos explicabo voluptatibus earum odio eius.
-                    <span class="author">By <a href="#">Lorem Ipsum</a></span>
+                    How many bodies or body parts were discovered underground
+                    after
+                    <i lang="pt-br">Brumadinho</i> dam collapse.
+                    <span class="author">
+                      By
+                      <a
+                        href="https://www.linkedin.com/in/manuel-marçal-05129914a/"
+                        target="_blank"
+                        >Manuel Marçal</a
+                      >,
+                      <a
+                        href="https://www.linkedin.com/in/marcos-carreiro-26413756/"
+                        target="_blank"
+                        >Marcos Carreiro</a
+                      >
+                      &
+                      <a
+                        href="https://www.linkedin.com/in/renato-crozatti/"
+                        target="_blank"
+                        >Renato Crozatti</a
+                      >
+                    </span>
                   </p>
                 </figcaption>
               </figure>
