--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             style="width: 120px; height: 120px"
           ></div>
 
-          <h1>Random Dots <span>Generator</span></h1>
+          <h1>Random Dots <span>Generator</span> !!!</h1>
           <p class="lead">
             Create an image with hundreds of tiny circles
             <span class="no-break">(with no overlaps!)</span>
